SONARJAVA-5299 Fix issues from review